complete documentation API
